fixed issue with cropped shadow of buttons

--- a/src/bma.client/css/website.less
+++ b/src/bma.client/css/website.less
@@ -12,6 +12,7 @@ html, body {
     padding: 0;
     text-align: center; 
     overflow-y: auto;
+    height: 100%; 
     .default-text();
 }
 
